tests/baselines/reference/asyncGenerators.objectLiteralMethod.22.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/objectLiteralMethods/asyncGenerators.objectLiteralMethod.22.es6.ts(2,14): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/asyncGenerators/es6/objectLiteralMethods/asyncGenerators.objectLiteralMethod.22.es6.ts (1 errors) ====
    const x = {
        async * [await]() {
                 ~~~~~
!!! error TS2304: Cannot find name 'await'.
        }
    }